formatted lists in display box

--- a/style.css
+++ b/style.css
@@ -18,7 +18,25 @@
     background: transparent;  /* optional: just make scrollbar invisible */
 }
 .album{
+	line-height: 60%;
+	display: inline;
 	font-size: 20px;
 	color: grey;
 	padding-left: 10px;
+}
+.albumThumbnail{
+
+	padding-right:10px;
+}
+.trackList{
+	position: relative;
+	right: 100px;
+	bottom: 300px;
+	list-style: none;
+	padding-left: 0px;
+	margin-bottom: 20px;
+}
+.track{
+	list-style: none;
+	padding-left: 30px
 }
