changed album heading formats

--- a/style.css
+++ b/style.css
@@ -14,8 +14,8 @@
 	max-width: 500px;
 }
 ::-webkit-scrollbar {
-    width: 0px;  /* remove scrollbar space */
-    background: transparent;  /* optional: just make scrollbar invisible */
+    width: 0px;
+    background: transparent;
 }
 .album{
 	padding-bottom: 50px;
